# datathinking

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt
data/datathinking.zulipchat.com/processed/: zerver_message.json  zerver_message.parquet  zerver_usermessage.json  zerver_usermessage.parquet
data/datathinking.zulipchat.com/raw/: messages-000001-sample-data.json  messages-000001.json
data_build_tool_for_processing_data/: .user.yml
data_build_tool_for_processing_data/datathinking/: .user.yml  dbt_project.yml
notebooks/: 230227-logistic-regression-example-on-iris-dataset.ipynb  230302-logistic-regression-math-equation-and-code.ipynb  230306-word-embeddings.ipynb  230313-embeddings-volume-2.ipynb  230316-embeddings-text-data-like-chat-logs-and-networks.ipynb  230318-nyc-open-data-week.ipynb  LR-breastcancer.ipynb  breast-cancer.ipynb
notebooks/in-class-notebooks/: 230330-first-two-homework-items-zulip-data.ipynb  230406-data-build-tool-for-new-york-city-311-phone-call-data.ipynb  230410-data-build-tool-for-standardizing-zulip-chat-data.ipynb  230413-gpt-4-duckdb-standardizing-schema-for-zulip-and-311-new-york-city-calls-data.ipynb  230417-debugging-duckdb-and-cleaning-data-with-dbt-and-reading-and-standardizing-json.ipynb  230420-zulip-chat-duckdb-loading.ipynb
