[tool.poetry]
name = "datathinking-org"
version = "0.1.0"
description = "Data Thinking environment for coding in MacOS, Windows, or Linux."
authors = ["Jaan Altosaar <jaan@onefact.org>"]
license = "Apache 2.0"
readme = "README.md"
packages = [{include = "datathinking"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
requests = "^2.28.2"
jax = {extras = ["cpu"], version = "^0.4.8"}
scikit-learn = "^1.2.2"
matplotlib = "^3.7.1"
altair = "^4.2.2"
notebook = "^6.5.4"
ipython = "^8.12.0"
ipykernel = "^6.22.0"
pandas = "^2.0.0"
polars = "^0.17.2"
dbt-duckdb = "^1.4.1"
jupysql = "^0.7.0"
networkx = "^3.1"
scipy = "^1.10.1"
numpy = "^1.24.2"

[tool.poetry.group.dev.dependencies]
PyYAML = "^6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
